--- a/MetadatasetGenerator.ipynb
+++ b/MetadatasetGenerator.ipynb
@@ -332,8 +332,8 @@
         "      models.append(('SVM', SVC()))\n",
         "      models.append(('NB', GaussianNB()))\n",
         "      models.append(('ADA', AdaBoostClassifier(random_state=14)))\n",
-        "      models.append(('RegLog', LogisticRegression(random_state=14, max_iter=1000)))\n",
-        "      models.append(('CART', DecisionTreeClassifier(random_state=14)))\n",
+        "      models.append(('LogReg', LogisticRegression(random_state=14, max_iter=1000)))\n",
+        "      models.append(('DT', DecisionTreeClassifier(random_state=14)))\n",
         "\n",
         "      # Creates the performance dataframe, that stores the cumulative return for each model\n",
         "      self.performance = pd.DataFrame(columns=['Model', 'Cumulative Return'])\n",
@@ -525,7 +525,7 @@
         "metadataset = metadataset.drop_duplicates(subset='Name').reset_index(drop=True)\n",
         "\n",
         "# This is the version of the Meta-dataset that uses the Cumulative Return. The Balanced Accuracy version\n",
-        "# can be obtained in analogous way \n",
+        "# can be obtained in analogous way. The results obtained are stored in cumulative_return_metadataset.csv  \n",
         "metadataset.to_csv('cumulative_return_metadataset.csv')"
       ]
     }
