--- a/MetadatasetGenerator.ipynb
+++ b/MetadatasetGenerator.ipynb
@@ -389,8 +389,6 @@
         "  #metadataset = pd.read_csv('/content/Metadataset_return_' + list_source +'.csv')\n",
         "  #performance = pd.read_csv('/content/performance_'+ list_source +'.csv')\n",
         "  # Remove a coluna 'Unnamed' dos dataframes\n",
-        "  #metadataset = metadataset.iloc[: , 1:]\n",
-        "  #performance = performance.iloc[: , 1:]\n",
         "\n",
         "  companies = pd.read_csv('/content/'+ list_source +'_constituents.csv')\n",
         "  sectors = companies['Sector'].unique()\n",
@@ -469,8 +467,8 @@
         "    performance = performance.append(performance_dict,ignore_index=True)\n",
         "\n",
         "    # Most recent version of the Meta-dataset, used as backup\n",
-        "    metadataset.to_csv('Metadataset_return_'+ list_source + '.csv')\n",
-        "    performance.to_csv('performance_' + list_source + '.csv')\n",
+        "    metadataset.to_csv('Metadataset_return_'+ list_source + '.csv', encoding='utf-8',index=False)\n",
+        "    performance.to_csv('performance_' + list_source + '.csv', encoding='utf-8',index=False)\n",
         "\n",
         "  # Finished all companies from the list\n",
         "  tempo_total = performance['Time(s)'].sum()\n",
@@ -525,8 +523,8 @@
         "metadataset = metadataset.drop_duplicates(subset='Name').reset_index(drop=True)\n",
         "\n",
         "# This is the version of the Meta-dataset that uses the Cumulative Return. The Balanced Accuracy version\n",
-        "# can be obtained in analogous way. The results obtained are stored in cumulative_return_metadataset.csv  \n",
-        "metadataset.to_csv('cumulative_return_metadataset.csv')"
+        "# can be obtained in analogous way. The results obtained are stored in Meta-dataset.csv  \n",
+        "metadataset.to_csv('Meta-dataset.csv', encoding='utf-8',index=False)"
       ]
     }
   ],
