Separating files into foldes

--- a/notebooks/MetadatasetGenerator.ipynb
+++ b/notebooks/MetadatasetGenerator.ipynb
@@ -237,7 +237,7 @@
         "id": "d0_ZUcrp9k-u"
       },
       "source": [
-        "## Generating the Meta-dataset"
+        "## Generating the Metadataset"
       ]
     },
     {
@@ -277,13 +277,13 @@
         "      cumulativeReturn = cumulativeReturn[~np.isnan(cumulativeReturn)]\n",
         "      return round(np.sum(cumulativeReturn), 2)\n",
         "\n",
-        "    # Extracts meta-data using the Catch22 library\n",
+        "    # Extracts metadata using the Catch22 library\n",
         "    def extractsCatch22(self):\n",
         "      catch = pycatch22.catch22_all(self.dataframe.Close)\n",
         "\n",
         "      return catch['names'], catch['values']\n",
         "\n",
-        "    # Extracts meta-data using the PyMFE library\n",
+        "    # Extracts metadata using the PyMFE library\n",
         "    def extractsPymfe(self, target):\n",
         "      mfe = MFE(groups=[\"general\", \"statistical\"])\n",
         "      mfe.fit(np.asarray(self.dataframe), np.asarray(target))\n",
@@ -291,12 +291,12 @@
         "\n",
         "      return ft[0], ft[1]\n",
         "\n",
-        "    # Extracts meta-data using the two previous libraries, and concatenates the result\n",
+        "    # Extracts metadata using the two previous libraries, and concatenates the result\n",
         "    def extractsMetadata(self, target):\n",
         "      dict_pymfe = {}\n",
         "      dict_catch = {}\n",
         "\n",
-        "      # Catch22 meta-data\n",
+        "      # Catch22 metadata\n",
         "      catch_01, catch_02 = self.extractsCatch22()\n",
         "      for nomeChave in catch_01:\n",
         "        for valorChave in catch_02:\n",
@@ -304,7 +304,7 @@
         "          catch_02.remove(valorChave)\n",
         "          break \n",
         "\n",
-        "      # PyMFE meta-data\n",
+        "      # PyMFE metadata\n",
         "      pymfe_01, pymfe_02 = self.extractsPymfe(target)\n",
         "      for nomeChave in pymfe_01:\n",
         "        for valorChave in pymfe_02:\n",
@@ -363,7 +363,7 @@
         "\n",
         "        self.insert(model_name, retsum) # Inserts the result of the model in the performance dataframe\n",
         "\n",
-        "      return self.performance, self.extractsMetadata(target) # Returns the performance dataset and the extracted meta-data"
+        "      return self.performance, self.extractsMetadata(target) # Returns the performance dataset and the extracted metadata"
       ]
     },
     {
@@ -374,14 +374,14 @@
       },
       "outputs": [],
       "source": [
-        "# Generates the complete Meta-dataset for a specific list of stocks\n",
+        "# Generates the complete Metadataset for a specific list of stocks\n",
         "def generatesMetadataset(list_source):\n",
         "\n",
         "  # Since this process takes a lot of time to be finished, the enviroment can shutdown. This functions creates a backup of the \n",
-        "  # Meta-dataset everytime a sector is finished. To retrive the data in the last backup, comment the definition of the dataset \n",
+        "  # Metadataset everytime a sector is finished. To retrive the data in the last backup, comment the definition of the dataset \n",
         "  # and remove the comments from the next section of code\n",
         "\n",
-        "  # Starting a new meta-dataset\n",
+        "  # Starting a new metadataset\n",
         "  metadataset = pd.DataFrame(columns=['Name', 'Model', 'Sector'])\n",
         "  performance = pd.DataFrame(columns=['Sector', 'Time(s)', 'Total', 'Success', 'Not found', 'Uncompatible period'])\n",
         "\n",
@@ -403,7 +403,7 @@
         "    success, not_found, uncompatible = 0, 0, 0\n",
         "    companies_by_sector = companies[companies.Sector == sector]\n",
         "\n",
-        "    starting_time = time.time() # Stores the time generating each sector of the Meta-dataset\n",
+        "    starting_time = time.time() # Stores the time generating each sector of the Metadataset\n",
         "\n",
         "    # For each stock in the list\n",
         "    for companie in companies_by_sector['Name']:\n",
@@ -422,26 +422,26 @@
         "          ap = learning(df)\n",
         "          #metadata_dict = ap.training()\n",
         "\n",
-        "          # Stores the performance extraction and data characterization parts of the Meta-dataset\n",
+        "          # Stores the performance extraction and data characterization parts of the Metadataset\n",
         "          ranking, metadata_dict = ap.training()\n",
         "\n",
         "          performance_dict = ranking.to_dict(orient=\"list\")\n",
         "\n",
-        "          # Stores the Cumulative Return of each model, enables the regression of the Meta-dataset\n",
+        "          # Stores the Cumulative Return of each model, enables the regression of the Metadataset\n",
         "          for i in range(len(performance_dict['Model'])):\n",
         "            metadata_dict[\"ret_\" + performance_dict['Model'][i]] = performance_dict['Cumulative Return'][i]\n",
         "\n",
-        "          # Stores the model with greatest Cumulative Return, enables the classification of the Meta-dataset storing\n",
+        "          # Stores the model with greatest Cumulative Return, enables the classification of the Metadataset storing\n",
         "          ranking = ranking.sort_values(by=['Cumulative Return'], ascending=False)\n",
         "\n",
-        "          # Additional data used on the Meta-dataset\n",
+        "          # Additional data used on the Metadataset\n",
         "          metadata_dict['Name'] = companie\n",
         "          metadata_dict['Sector'] = sector\n",
         "          metadata_dict['Model'] = ranking['Model'].iloc[:1].values[0]\n",
         "          metadata_dict['Starting_date'] = df.index[0].date()\n",
         "          metadata_dict['Closing_date'] = df.index[-1].date()\n",
         "\n",
-        "          # Inserts the data of the last company searched on yfinance in the Meta-dataset\n",
+        "          # Inserts the data of the last company searched on yfinance in the Metadataset\n",
         "          metadataset = metadataset.append(metadata_dict,ignore_index=True)\n",
         "\n",
         "        else:\n",
@@ -451,7 +451,7 @@
         "      except:\n",
         "        not_found+=1 # Time serie not found\n",
         "\n",
-        "    # Everytime a Sector is completely finished, stores information of performance and creates a backup of the Meta-dataset\n",
+        "    # Everytime a Sector is completely finished, stores information of performance and creates a backup of the Metadataset\n",
         "    metadataset = metadataset.dropna(axis=1,how='all')\n",
         "\n",
         "    # Performance data\n",
@@ -465,13 +465,13 @@
         "    }\n",
         "    performance = performance.append(performance_dict,ignore_index=True)\n",
         "\n",
-        "    # Most recent version of the Meta-dataset, used as backup\n",
+        "    # Most recent version of the Metadataset, used as backup\n",
         "    metadataset.to_csv('Metadataset_return_'+ list_source + '.csv', encoding='utf-8',index=False)\n",
         "    performance.to_csv('performance_' + list_source + '.csv', encoding='utf-8',index=False)\n",
         "\n",
         "  # Finished all companies from the list\n",
         "  tempo_total = performance['Time(s)'].sum()\n",
-        "  print(\"Total time for generating Meta-dataset:\", str(datetime.timedelta(seconds=round(tempo_total))) )"
+        "  print(\"Total time for generating Metadataset:\", str(datetime.timedelta(seconds=round(tempo_total))) )"
       ]
     },
     {
@@ -482,7 +482,7 @@
       },
       "outputs": [],
       "source": [
-        "# Creates three Meta-datasets for three different lists of stocks\n",
+        "# Creates three Metadatasets for three different lists of stocks\n",
         "generatesMetadataset('SP500')\n",
         "generatesMetadataset('wilshire')\n",
         "generatesMetadataset('Stockmonitor')"
@@ -494,7 +494,7 @@
         "id": "BUDLH-t9Kmn3"
       },
       "source": [
-        "## Concatenating Meta-datasets"
+        "## Concatenating Metadatasets"
       ]
     },
     {
@@ -505,7 +505,7 @@
       },
       "outputs": [],
       "source": [
-        "# Concatenates the three Meta-datasets and remove duplicates\n",
+        "# Concatenates the three Metadatasets and remove duplicates\n",
         "stockmonitor_metadataset = pd.read_csv('/content/Metadataset_return_Stockmonitor.csv')\n",
         "stockmonitor_metadataset = stockmonitor_metadataset.iloc[: , 1:]\n",
         "stockmonitor_metadataset = stockmonitor_metadataset.dropna()\n",
@@ -521,9 +521,9 @@
         "metadataset = pd.concat([stockmonitor_metadataset, sp500_metadataset, wilshire_metadataset]).reset_index(drop=True)\n",
         "metadataset = metadataset.drop_duplicates(subset='Name').reset_index(drop=True)\n",
         "\n",
-        "# This is the version of the Meta-dataset that uses the Cumulative Return. The Balanced Accuracy version\n",
-        "# can be obtained in analogous way. The results obtained are stored in Meta-dataset.csv  \n",
-        "metadataset.to_csv('Meta-dataset.csv', encoding='utf-8',index=False)"
+        "# This is the version of the Metadataset that uses the Cumulative Return. The Balanced Accuracy version\n",
+        "# can be obtained in analogous way. The results obtained are stored in Metadataset.csv  \n",
+        "metadataset.to_csv('Metadataset.csv', encoding='utf-8',index=False)"
       ]
     }
   ],
