--- a/notebooks/MetadatasetAnalysis.ipynb
+++ b/notebooks/MetadatasetAnalysis.ipynb
@@ -786,7 +786,7 @@
         "id": "qIiAeqpeuZru"
       },
       "source": [
-        "# Meta level evaluation"
+        "# Meta-level evaluation"
       ]
     },
     {
@@ -1453,7 +1453,7 @@
         "id": "qrJlSoMrwXNH"
       },
       "source": [
-        "# Base level evaluation"
+        "# Base-level evaluation"
       ]
     },
     {
@@ -1462,7 +1462,7 @@
         "id": "UVxBG4N--_m_"
       },
       "source": [
-        "As we can see in the Meta level results, our best recommender is the Random Forest, so we'll be using it for the Base level evaluation."
+        "As we can see in the Meta-level results, our best recommender is the Random Forest, so we'll be using it for the Base level evaluation."
       ]
     },
     {
