--- a/notebooks/MetadatasetGenerator.ipynb
+++ b/notebooks/MetadatasetGenerator.ipynb
@@ -237,7 +237,7 @@
     "id": "d0_ZUcrp9k-u"
    },
    "source": [
-    "## Generating the Metadataset"
+    "## Generating the metadataset"
    ]
   },
   {
@@ -374,7 +374,7 @@
    },
    "outputs": [],
    "source": [
-    "# Generates the complete Metadataset for a specific list of stocks\n",
+    "# Generates the complete metadataset for a specific list of stocks\n",
     "def generatesMetadataset(list_source):\n",
     "\n",
     "  # Since this process takes a lot of time to be finished, the enviroment can shutdown. This functions creates a backup of the \n",
@@ -422,26 +422,26 @@
     "          ap = learning(df)\n",
     "          #metadata_dict = ap.training()\n",
     "\n",
-    "          # Stores the performance extraction and data characterization parts of the Metadataset\n",
+    "          # Stores the performance extraction and data characterization parts of the metadataset\n",
     "          ranking, metadata_dict = ap.training()\n",
     "\n",
     "          performance_dict = ranking.to_dict(orient=\"list\")\n",
     "\n",
-    "          # Stores the Cumulative Return of each model, enables the regression of the Metadataset\n",
+    "          # Stores the Cumulative Return of each model, enables the regression of the metadataset\n",
     "          for i in range(len(performance_dict['Model'])):\n",
     "            metadata_dict[\"ret_\" + performance_dict['Model'][i]] = performance_dict['Cumulative Return'][i]\n",
     "\n",
-    "          # Stores the model with greatest Cumulative Return, enables the classification of the Metadataset storing\n",
+    "          # Stores the model with greatest Cumulative Return, enables the classification of the metadataset storing\n",
     "          ranking = ranking.sort_values(by=['Cumulative Return'], ascending=False)\n",
     "\n",
-    "          # Additional data used on the Metadataset\n",
+    "          # Additional data used on the metadataset\n",
     "          metadata_dict['Name'] = companie\n",
     "          metadata_dict['Sector'] = sector\n",
     "          metadata_dict['Model'] = ranking['Model'].iloc[:1].values[0]\n",
     "          metadata_dict['Starting_date'] = df.index[0].date()\n",
     "          metadata_dict['Closing_date'] = df.index[-1].date()\n",
     "\n",
-    "          # Inserts the data of the last company searched on yfinance in the Metadataset\n",
+    "          # Inserts the data of the last company searched on yfinance in the metadataset\n",
     "          metadataset = metadataset.append(metadata_dict,ignore_index=True)\n",
     "\n",
     "        else:\n",
@@ -451,7 +451,7 @@
     "      except:\n",
     "        not_found+=1 # Time serie not found\n",
     "\n",
-    "    # Everytime a Sector is completely finished, stores information of performance and creates a backup of the Metadataset\n",
+    "    # Everytime a Sector is completely finished, stores information of performance and creates a backup of the metadataset\n",
     "    metadataset = metadataset.dropna(axis=1,how='all')\n",
     "\n",
     "    # Performance data\n",
@@ -465,13 +465,13 @@
     "    }\n",
     "    performance = performance.append(performance_dict,ignore_index=True)\n",
     "\n",
-    "    # Most recent version of the Metadataset, used as backup\n",
-    "    metadataset.to_csv('Metadataset_return_'+ list_source + '.csv', encoding='utf-8',index=False)\n",
+    "    # Most recent version of the metadataset, used as backup\n",
+    "    metadataset.to_csv('metadataset_return_'+ list_source + '.csv', encoding='utf-8',index=False)\n",
     "    performance.to_csv('performance_' + list_source + '.csv', encoding='utf-8',index=False)\n",
     "\n",
     "  # Finished all companies from the list\n",
     "  tempo_total = performance['Time(s)'].sum()\n",
-    "  print(\"Total time for generating Metadataset:\", str(datetime.timedelta(seconds=round(tempo_total))) )"
+    "  print(\"Total time for generating metadataset:\", str(datetime.timedelta(seconds=round(tempo_total))) )"
    ]
   },
   {
@@ -482,7 +482,7 @@
    },
    "outputs": [],
    "source": [
-    "# Creates three Metadatasets for three different lists of stocks\n",
+    "# Creates three metadatasets for three different lists of stocks\n",
     "generatesMetadataset('SP500')\n",
     "generatesMetadataset('wilshire')\n",
     "generatesMetadataset('Stockmonitor')"
@@ -494,7 +494,7 @@
     "id": "BUDLH-t9Kmn3"
    },
    "source": [
-    "## Concatenating Metadatasets"
+    "## Concatenating metadatasets"
    ]
   },
   {
@@ -505,7 +505,7 @@
    },
    "outputs": [],
    "source": [
-    "# Concatenates the three Metadatasets and remove duplicates\n",
+    "# Concatenates the three metadatasets and remove duplicates\n",
     "stockmonitor_metadataset = pd.read_csv('/content/Metadataset_return_Stockmonitor.csv')\n",
     "stockmonitor_metadataset = stockmonitor_metadataset.iloc[: , 1:]\n",
     "stockmonitor_metadataset = stockmonitor_metadataset.dropna()\n",
@@ -521,7 +521,7 @@
     "metadataset = pd.concat([stockmonitor_metadataset, sp500_metadataset, wilshire_metadataset]).reset_index(drop=True)\n",
     "metadataset = metadataset.drop_duplicates(subset='Name').reset_index(drop=True)\n",
     "\n",
-    "# This is the version of the Metadataset that uses the Cumulative Return. The Balanced Accuracy version\n",
+    "# This is the version of the metadataset that uses the Cumulative Return. The Balanced Accuracy version\n",
     "# can be obtained in analogous way. The results obtained are stored in Metadataset.csv\n",
     "# https://github.com/ferracioli/Market-Movement-Prediction-Algorithm-Selection-by-Metalearning/blob/main/data/Metadataset.csv\n",
     "metadataset.to_csv('Metadataset.csv', encoding='utf-8',index=False)"
